v-token/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v-tokens
  labels:
    app: v-tokens
spec:
  selector:
    matchLabels:
      app: v-tokens
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: v-tokens
    spec:
      containers:
      - name: v-tokens-back-end
        image: ducdm99tb/v-tokens:1.0
        imagePullPolicy: Always
        command:
          - bash
        args:
          - -c
          - "python3 -m gunicorn vtokens.wsgi:application --bind=0.0.0.0:8080 -w 2 --reload"
        volumeMounts:
          - name: fabric-service-projects
            mountPath: /backend/fabric_service/projects
            
      - name: v-tokens-worker
        image: ducdm99tb/v-tokens:1.0
        imagePullPolicy: Always
        command:
          - bash
        args:
          - -c
          - "celery --app=vtokens worker --autoscale=2,1 -l DEBUG"
        volumeMounts:
          - name: fabric-service-projects
            mountPath: /backend/fabric_service/projects

      - name: v-tokens-scheduler
        image: ducdm99tb/v-tokens:1.0
        imagePullPolicy: Always
        command:
          - bash
        args:
          - -c
          - "celery --app=vtokens beat -l DEBUG"
        volumeMounts:
          - name: fabric-service-projects
            mountPath: /backend/fabric_service/projects

      volumes:
        - name: fabric-service-projects
          persistentVolumeClaim:
            claimName: fabric-service-pvc

      imagePullSecrets:
      - name: token-docker
      restartPolicy: Always
