v-token/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: v-tokens-service
spec:
    type: NodePort
    selector:
      app: v-tokens
    ports:
      - port: 80
        targetPort: 8080
        protocol: TCP
